alignment issues in menu

--- a/src/components/common/layouts/header/header.module.scss
+++ b/src/components/common/layouts/header/header.module.scss
@@ -48,10 +48,11 @@
 
 .header {
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  color: var(--color-icon, black);
+  color: var(--color-icon, #{$colors-main});
   background: var(--header-background-color, white);
   box-shadow: var(--header-shadow, 0px 4px 2px rgba(0, 0, 0, 0.15));
 
@@ -77,6 +78,7 @@
       padding-top: 8px;
       padding-bottom: 8px;
       align-items: center;
+
       > svg {
         height: 38px;
         fill: var(--logo-color, $colors-main);
